<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar

            android:id="@+id/customToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:elevation="4dp"
            android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="0dp"
            android:layout_marginTop="24dp"/>

        <!-- Image -->
        <ImageView
            android:id="@+id/imageViewDetail"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="12dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="@id/customToolbar"
            android:background="@android:color/darker_gray" />

        <!-- Name -->
        <EditText
            android:id="@+id/editTextName"
            android:hint="@string/diecast_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:inputType="textCapWords|textPersonName"
            android:backgroundTint="@color/Teal" />

        <!-- Maker -->
        <EditText
            android:id="@+id/editTextMaker"
            android:hint="@string/model_maker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:inputType="textCapWords|textPersonName"
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            android:backgroundTint="@color/Teal" />

        <!-- Release Info -->
        <EditText
            android:id="@+id/editTextReleaseInfo"
            android:hint="@string/release_info_e_g_1_250_2024"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:inputType="textCapWords|textPersonName"
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            android:backgroundTint="@color/Teal" />

        <!-- Price -->
        <EditText
            android:id="@+id/editTextPrice"
            android:hint="@string/price_bought_for"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            android:backgroundTint="@color/Teal" />

        <!-- Purchase Date -->
        <EditText
            android:id="@+id/editTextPurchaseDate"
            android:hint="@string/purchase_date_mm_yyyy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:inputType="textCapWords|textPersonName"
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            android:backgroundTint="@color/Teal" />

        <!-- Primary Color -->
        <EditText
            android:id="@+id/editTextPrimaryColor"
            android:hint="@string/primary_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:paddingBottom="12dp"
            android:inputType="textCapWords|textPersonName"
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            android:backgroundTint="@color/Teal" />

        <!-- Secondary Color -->
        <EditText
            android:id="@+id/editTextSecondaryColor"
            android:hint="@string/secondary_color_optional"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:inputType="textCapWords|textPersonName"
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            android:backgroundTint="@color/Teal" />

        <!-- Livery -->
        <EditText
            android:id="@+id/editTextLivery"
            android:hint="@string/livery_optional"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:inputType="textCapWords|textPersonName"
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            android:backgroundTint="@color/Teal" />

        <!-- Set/Series -->
        <Spinner
            android:id="@+id/spinnerSet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:backgroundTint="@color/Teal"
            android:popupBackground="#222222"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"/>

        <!-- Category -->
        <Spinner
            android:id="@+id/spinnerCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/Teal"
            android:popupBackground="#222222"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="30dp"
            android:gravity="center"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <!-- Save Button -->
            <Button
                android:id="@+id/buttonDelete"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:textColor="@color/black"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/Teal" />

            <!-- Save Button -->
            <Button
                android:id="@+id/buttonSaveChanges"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/save_changes"
                android:textColor="@color/black"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/Teal" />


        </LinearLayout>

    </LinearLayout>
</ScrollView>